# newterm

./: PKGBUILD  pyproject.toml  requirements.txt
docs/: README.md
src/: config.py  config_parser.py  config_validator.py  keybinding_manager.py  main.py  plugin_api.py  plugin_manager.py  preferences_dialog.py  pyproject.toml  session_manager.py  tab_manager.py
src/example_plugin/: plugin.json  plugin.py
