[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newterm"
version = "0.1.3"
description = "A custom terminal emulator for Wayland with GPU acceleration and customizable themes"
authors = [
    {name = "Gage Singleton", email = "zeroday0x00@disroot.org"}
]
dependencies = [
    "PyGObject",
    "vte",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
]

[project.scripts]
newterm = "newterm.main:main"

[tool.setuptools]
package-dir = {"newterm" = "src"}
packages = ["newterm"]

[tool.setuptools.package-data]
"newterm" = ["*.json"]
